# rust-chatgpt

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  test.yml
src/: error.rs  http.rs  lib.rs
src/v1/: audio.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  images.rs  mod.rs  models.rs
tests/: gpt_test.rs
