[package]
name = "rust-chatgpt"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/hedwig-corp/rust-chatgpt"
authors = ["uiuifree", "vincenzopalazzo <vincenzopalazzodev@gmail.com>"]
description = "OpenAI API Client for Rust"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }